# timekeeper

./: Cargo.toml  Dockerfile  README.md  deployment.yaml
.github/workflows/: ci.yml  deploy.yml
scripts/: init_kafka.sh  kafka.yml
src/: main.rs  settings.rs
