[package]
name = "timekeeper"
version = "0.1.0"
authors = ["Sebastian Rollen <seb@overmu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpaca = { git = "ssh://git@github.com/Overmuse/alpaca", tag = "v0.5.1" } 
anyhow = "1.0.40"
chrono = "0.4.19"
config = "0.11.0"
dotenv = "0.15.0"
futures = "0.3.14"
kafka-settings = { git = "ssh://git@github.com/Overmuse/kafka-settings", tag = "v0.2.2" } 
rdkafka = { version = "0.26.0", features = ["ssl-vendored"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread" ] }
